[package]
name = "casgen"
version = "0.1.4"
edition = "2021"
description = "A way to generate cas12 6-plex CRISPR sequences"
repository = "https://github.com/noamteyssier/casgen"
license = "MIT"
keywords = ["bioinformatics", "sequencing", "CRISPR", "cas12"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.9", features = ["derive"] }
rand = "0.8.5"
